--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -462,34 +462,14 @@ a:hover {
 }
 
 .inner {
-  max-width: 50%;
+  width: 90%;
 }
 
 
-/* #Media Queries
-================================================== */
 
-/* Smaller than standard 960 (devices and browsers) */
-@media only screen and (max-width: 959px) { }
+ @media only screen and (min-width:1025px) {
+   .inner {
+     max-width: 50%;
+   }
+ }
 
-/* Tablet Portrait size to standard 960 (devices and browsers) */
-@media only screen and (min-width: 768px) and (max-width: 959px) { }
-
-/* All Mobile Sizes (devices and browser) */
-@media only screen and (max-width: 767px) {
-  header {
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-
-  .inner {
-    width: 94%;
-    margin: 0 auto;
-  }
-}
-
-/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-@media only screen and (min-width: 480px) and (max-width: 767px) { }
-
-/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-@media only screen and (max-width: 479px) { }
